[TASK] Added a JavaScript Obfuscator for the Tracking.js

--- a/Resources/Private/Templates/CookieFrontend/List.html
+++ b/Resources/Private/Templates/CookieFrontend/List.html
@@ -2,7 +2,7 @@
 <f:layout name="Default" />
 <f:section name="content">
 
-    <div style="display: none;" id="cf-cookiemanager-tracker" data-page="{page}" data-url="{f:uri.action(action: 'track', absolute: '1', controller: 'CookieFrontend', pluginName: 'Cookiefrontend', pageType:'1682010733')}"></div>
+    <div style="display: none;" id="cf-cookiemanager-1682010733" data-page="{page}" data-url="{generatedTrackingUrl}"></div>
 
     <f:if condition="{extensionConfiguration.disablePlugin} !== '1'">
         <f:if condition="{frontendSettings.custombutton}">
