--- a/Resources/Private/Partials/BackendTabs/categories.html
+++ b/Resources/Private/Partials/BackendTabs/categories.html
@@ -10,33 +10,29 @@
     </div>
     <div class="row">
         <div class="col col-sm-12 col-md-12 col-xl-8">
+            <div class="cf-color-wrapper">
+               <f:be.tableList tableName="tx_cfcookiemanager_domain_model_cookiecartegories"
+                                        storagePid="{storageUID}"
+                                        filter=""
+                                        recordsPerPage="50"
+                                        sortDescending="true"
+                                        readOnly="false"
+                                        enableClickMenu="true"
+                                        enableControlPanels="true"
+                                        clickTitleMode="edit"
+                                        />
 
-       <f:be.tableList tableName="tx_cfcookiemanager_domain_model_cookiecartegories"
-                                storagePid="{storageUID}"
-                                filter=""
-                                recordsPerPage="50"
-                                sortDescending="true"
-                                readOnly="false"
-                                enableClickMenu="true"
-                                enableControlPanels="true"
-                                clickTitleMode="edit"
-                                />
-
+            </div>
         </div>
         <div class="col col-sm-12 col-md-12 col-xl-4">
             <div style="margin-bottom: 40px;">
                 <be:link.newRecord  pid="{storageUID}" class="btn btn-default"  table="tx_cfcookiemanager_domain_model_cookiecartegories" >   Create new Category </be:link.newRecord>
             </div>
-
-            <div class="alert alert-info">
-                <div class="media">
-                    <div class="media-left"><span class="fa-stack fa-lg">        <i class="fa fa-circle fa-stack-2x"></i>        <i class="fa fa-info fa-stack-1x"></i>      </span>
-                    </div>
-                    <div class="media-body"><p><strong>Category Configuration</strong><br>
-                        Cookie Category are responsible for the Group management of the Settings Modal.<br><br>
-                        For more information, please refer to the following link: <a target="_blank" href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Configuration/CookieCategories/Index.html">Cookie Category Configuration -></a>
-                    </p>
-                    </div>
+            <div class="cf-tutorial-section">
+                <h3>Category Configuration</h3>
+                <p>  Cookie Category are responsible for the Group management of the Settings Modal.</p>
+                <div class="cf-cookie-btn-group">
+                    <a class="btn btn-primary btn-cookie-tutorial" target="_blank" href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Configuration/CookieCategories/Index.html">Cookie Category Docs -></a>
                 </div>
             </div>
         </div>
