--- a/Resources/Private/Partials/BackendTabs/frontend.html
+++ b/Resources/Private/Partials/BackendTabs/frontend.html
@@ -10,33 +10,30 @@
     <div class="row">
         <div class="col col-sm-12 col-md-12 col-xl-8">
 
-            <f:be.tableList tableName="tx_cfcookiemanager_domain_model_cookiefrontend"
-                            storagePid="{storageUID}"
-                            levels="0"
-                            filter=""
-                            recordsPerPage="50"
-                            sortField="sorting"
-                            sortDescending="true"
-                            readOnly="false"
-                            enableClickMenu="true"
-                            enableControlPanels="true"
-                            clickTitleMode="edit"
-            />
+            <div class="cf-color-wrapper">
 
+                <f:be.tableList tableName="tx_cfcookiemanager_domain_model_cookiefrontend"
+                                storagePid="{storageUID}"
+                                levels="0"
+                                filter=""
+                                recordsPerPage="50"
+                                sortField="sorting"
+                                sortDescending="true"
+                                readOnly="false"
+                                enableClickMenu="true"
+                                enableControlPanels="true"
+                                clickTitleMode="edit"
+                />
+
+            </div>
 
         </div>
         <div class="col col-sm-12 col-md-12 col-xl-4">
-            <div class="alert alert-info">
-                <div class="media">
-                    <div class="media-left"><span class="fa-stack fa-lg">        <i
-                            class="fa fa-circle fa-stack-2x"></i>        <i class="fa fa-info fa-stack-1x"></i>      </span>
-                    </div>
-                    <div class="media-body">
-                        <p ><strong>Frontend Settings</strong><br>
-                            Cookie frontend settings are responsible for the UI texts of the cookie box.<br><br>
-                            For more information, please refer to the following link: <a target="_blank" href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Configuration/FrontendSettings/Index.html">Cookie Frontend Settings -></a>
-                        </p>
-                    </div>
+            <div class="cf-tutorial-section">
+                <h3>Frontend Settings</h3>
+                <p>   Cookie frontend settings are responsible for the UI texts of the cookie box.</p>
+                <div class="cf-cookie-btn-group">
+                    <a class="btn btn-primary btn-cookie-tutorial" target="_blank" href="https://docs.typo3.org/p/codingfreaks/cf-cookiemanager/main/en-us/Configuration/FrontendSettings/Index.html">Frontend-Settings Docs -></a>
                 </div>
             </div>
         </div>
