--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -1,3 +1,16 @@
+table.dataTable.display > tbody > tr.odd > .sorting_1, table.dataTable.order-column.stripe > tbody > tr.odd > .sorting_1 {
+  box-shadow: none !important;
+}
+
+.cf-color-wrapper {
+  background: #EBEBEB;
+  padding: 20px;
+}
+
+.cf_manager .card-header .card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
 .cf_manager .recordlist {
   margin: 0 !important;
 }
@@ -137,7 +150,9 @@ table.dataTable {
   justify-content: space-between;
   display: flex;
   padding: 10px;
-  background-color: #EBEBEB;
+  border-color: #4B4B4B;
+  border-radius: 5px;
+  border: solid 1px;
   margin-bottom: 15px;
 }
 .tutorial-tours .tutorial-tour p {
@@ -154,6 +169,122 @@ table.dataTable {
   padding: 35px;
   background-color: rgb(226, 238, 249);
   border-color: rgba(197, 221, 243, 0.61);
+}
+
+.cf-tutorial-section {
+  background-color: #EBEBEB;
+  border-radius: 5px;
+  padding: 20px;
+  padding-bottom: 10px;
+  color: #4B4B4B;
+}
+.cf-tutorial-section h3 {
+  font-weight: bold;
+}
+.cf-tutorial-section p {
+  margin-bottom: 5px;
+}
+.cf-tutorial-section .cf-tutorial-notice {
+  background-color: white;
+  border-color: white;
+  border-radius: 5px;
+  font-weight: bold;
+  color: #4B4B4B;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+.cf-tutorial-section .btn-cookie-tutorial {
+  background-color: #e9cd2a;
+  border-color: #e9cd2a;
+  border-radius: 5px;
+  font-weight: bold;
+  color: #4B4B4B;
+  margin-right: 10px;
+}
+.cf-tutorial-section .cf-cookie-btn-group {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.cf-autoconfiguration-box {
+  background-color: #EBEBEB;
+  border-radius: 5px;
+  padding: 20px;
+  padding-bottom: 10px;
+  color: #4B4B4B;
+}
+.cf-autoconfiguration-box label, .cf-autoconfiguration-box span {
+  padding-left: 0;
+}
+.cf-autoconfiguration-box input {
+  border: none;
+}
+.cf-autoconfiguration-box .btn.btn-success {
+  color: white;
+  padding: 6px 18px;
+  border-radius: 5px;
+  font-size: 14px;
+  background-color: #1491AF;
+  font-weight: bold;
+  border: none;
+  margin-bottom: 10px;
+}
+
+.cf-scan-reports {
+  background-color: #EBEBEB;
+  border-radius: 5px;
+  padding: 20px;
+  padding-bottom: 10px;
+  color: #4B4B4B;
+  margin-top: 20px;
+}
+.cf-scan-reports .dataTables_wrapper .dataTables_length select, .cf-scan-reports .dataTables_wrapper .dataTables_filter input {
+  background: white;
+  border: none;
+}
+.cf-scan-reports h3 {
+  margin-bottom: 20px;
+}
+.cf-scan-reports .table > :not(caption) > * > * {
+  background-color: #EBEBEB;
+}
+.cf-scan-reports table.dataTable {
+  padding-top: 20px;
+}
+.cf-scan-reports .tx_cfcookiemanager.table.dataTable thead tr td {
+  background-color: #4B4B4B;
+  color: white;
+}
+.cf-scan-reports .tx_cfcookiemanager.table.dataTable tbody tr {
+  padding: 10px;
+  border-color: #4B4B4B;
+  background-color: #EBEBEB;
+  border-radius: 5px;
+  border: solid 1px;
+  margin-bottom: 15px;
+}
+.cf-scan-reports .tx_cfcookiemanager.table.dataTable tbody tr .btn {
+  color: white;
+  padding: 6px 18px;
+  border-radius: 5px;
+  font-size: 14px;
+  background-color: #1491AF;
+  font-weight: bold;
+  border: none;
+  margin-bottom: 6px;
+  margin-top: 6px;
+  margin-right: 10px;
+}
+.cf-scan-reports .tx_cfcookiemanager.table.dataTable tbody tr .btn:last-child {
+  background: #EBEBEB;
+  color: #4B4B4B;
+  border-color: #4B4B4B;
+  border: solid 1px;
+}
+.cf-scan-reports .tx_cfcookiemanager.table.dataTable tbody tr .btn.btn-light {
+  color: white;
+  background: #0066c4;
+  border-color: #0066c4;
 }
 
 /*# sourceMappingURL=CookieSettings.css.map */
