--- a/Resources/Public/Backend/Css/CookieSettings.scss
+++ b/Resources/Public/Backend/Css/CookieSettings.scss
@@ -1,4 +1,19 @@
+table.dataTable.display > tbody > tr.odd > .sorting_1, table.dataTable.order-column.stripe > tbody > tr.odd > .sorting_1{
+  box-shadow: none !important;
+}
+
+.cf-color-wrapper{
+  background: #EBEBEB;
+  padding: 20px;
+}
+
 .cf_manager{
+
+  .card-header .card-title{
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
   .recordlist{
    margin: 0 !important;
   }
@@ -165,7 +180,9 @@ table.dataTable{
       margin: 0;
     }
     padding: 10px;
-    background-color: #EBEBEB;
+    border-color: #4B4B4B;
+    border-radius: 5px;
+    border: solid 1px;
     margin-bottom: 15px;
   }
 }
@@ -179,4 +196,129 @@ table.dataTable{
   padding: 35px;
   background-color: rgb(226, 238, 249);
   border-color: rgba(197, 221, 243, 0.61);
+}
+
+.cf-tutorial-section{
+  background-color: #EBEBEB;
+  border-radius: 5px;
+  padding: 20px;
+  padding-bottom: 10px;
+  color: #4B4B4B;
+  h3{
+    font-weight: bold;
+  }
+  p{
+    margin-bottom: 5px;
+  }
+  .cf-tutorial-notice{
+    background-color: white;
+    border-color: white;
+    border-radius: 5px;
+    font-weight: bold;
+    color: #4B4B4B;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  .btn-cookie-tutorial{
+    background-color: #e9cd2a;
+    border-color: #e9cd2a;
+    border-radius: 5px;
+    font-weight: bold;
+    color: #4B4B4B;
+    margin-right:10px;
+  }
+  .cf-cookie-btn-group{
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+
+.cf-autoconfiguration-box{
+    background-color: #EBEBEB;
+    border-radius: 5px;
+    padding: 20px;
+    padding-bottom: 10px;
+    color: #4B4B4B;
+    label,span{
+      padding-left: 0;
+    }
+  input{
+    border:none;
+  }
+
+  .btn.btn-success{
+    color: white;
+    padding: 6px 18px;
+    border-radius: 5px;
+    font-size: 14px;
+    background-color: #1491AF;
+    font-weight: bold;
+    border: none;
+    margin-bottom: 10px;
+  }
+
+}
+
+.cf-scan-reports{
+  background-color: #EBEBEB;
+  border-radius: 5px;
+  padding: 20px;
+  padding-bottom: 10px;
+  color: #4B4B4B;
+  margin-top: 20px;
+
+  .dataTables_wrapper .dataTables_length select,.dataTables_wrapper .dataTables_filter input{
+    background: white;
+    border: none;
+  }
+
+  h3{
+    margin-bottom: 20px;
+  }
+
+  .table>:not(caption)>*>*{
+    background-color: #EBEBEB;
+  }
+  table.dataTable{
+    padding-top: 20px;
+  }
+
+  .tx_cfcookiemanager.table.dataTable thead tr td{
+    background-color: #4B4B4B;
+    color: white;
+  }
+  .tx_cfcookiemanager.table.dataTable tbody tr{
+    padding: 10px;
+    border-color: #4B4B4B;
+    background-color: #EBEBEB;
+    border-radius: 5px;
+    border: solid 1px;
+    margin-bottom: 15px;
+
+    .btn{
+      color: white;
+      padding: 6px 18px;
+      border-radius: 5px;
+      font-size: 14px;
+      background-color: #1491AF;
+      font-weight: bold;
+      border: none;
+      margin-bottom: 6px;
+      margin-top: 6px;
+      margin-right: 10px;
+      &:last-child{
+        background: #EBEBEB;
+        color: #4B4B4B;
+        border-color: #4B4B4B;
+        border:solid 1px;
+      }
+    }
+
+    .btn.btn-light{
+      color: white;
+      background: #0066c4;
+      border-color: #0066c4;
+    }
+  }
+
 }
