[TODO] Drag and Drop sorting

--- a/Resources/Private/Partials/BackendTabs/home.html
+++ b/Resources/Private/Partials/BackendTabs/home.html
@@ -6,6 +6,7 @@
             <div class="card-header-body">
                 <h1 class="card-title">Home</h1>
                 <span class="card-subtitle">Here you can configure your categories and the assigned services per language.</span>
+                <!-- @TODO drag and drop sorting for Categories and Services by ajax -->
             </div>
         </div>
     </div>
