--- a/Resources/Public/Scss/default.css
+++ b/Resources/Public/Scss/default.css
@@ -1585,6 +1585,14 @@ div[data-service] .c-n-t a:hover {
   border-color: transparent;
 }
 
+#cm {
+  max-width: 36.2em;
+}
+
+.c-bn {
+  word-break: break-word;
+}
+
 #s-cnt .cfwrapper {
   background: var(--cc-cookie-category-block-bg);
   margin-bottom: 20px;
