[TASK] Preparing Release 1.4.1

--- a/Resources/Private/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Templates/CookieSettingsBackend/Index.html
@@ -40,7 +40,7 @@
                     </p>
                     <f:form method="post" action="index">
                         <f:form.textfield style="display:none;"  value="start" name="firstconfigurationinstall"></f:form.textfield>
-                        <f:form.button class="btn btn-success">Start Configuration</f:form.button>
+                        <f:form.button class="btn btn-success startConfiguration">Start Configuration</f:form.button>
                     </f:form>
 
 
