[TASK] changed domain and timeout

--- a/Resources/Private/Templates/CookieSettingsBackend/Index.html
+++ b/Resources/Private/Templates/CookieSettingsBackend/Index.html
@@ -39,7 +39,7 @@
                         <f:then>
                             <!-- Custom import needed -->
                             <p>You can import the data manually. Keep in mind, in this case you can not use the codingfreaks API Features in this Extension.</p>
-                            <a class="btn btn-primary" target="_blank" href="https://cookieapitest.coding-freaks.com/application-programming-interface">Download Preset</a>
+                            <a class="btn btn-primary" target="_blank" href="https://cookieapi.coding-freaks.com/application-programming-interface">Download Preset</a>
                             <hr>
                             <!-- Add form for zip upload -->
                             <f:form method="post" enctype="multipart/form-data" action="index" name="zipUpload" id="zipUpload">
