[TASK] Removed unused Code

--- a/Resources/Public/Backend/Css/CookieSettings.css
+++ b/Resources/Public/Backend/Css/CookieSettings.css
@@ -113,7 +113,7 @@ table.dataTable {
   padding: 6px 18px;
   border-radius: 5px;
   font-size: 14px;
-  background-color: #1491AF;
+  background-color: #9BB51C;
 }
 .settings-configuration .settings-item-head {
   display: flex;
@@ -224,7 +224,7 @@ table.dataTable {
   padding: 6px 18px;
   border-radius: 5px;
   font-size: 14px;
-  background-color: #1491AF;
+  background-color: #9BB51C;
   font-weight: bold;
   border: none;
   margin-bottom: 10px;
@@ -268,7 +268,7 @@ table.dataTable {
   padding: 6px 18px;
   border-radius: 5px;
   font-size: 14px;
-  background-color: #1491AF;
+  background-color: #9BB51C;
   font-weight: bold;
   border: none;
   margin-bottom: 6px;
