--- a/Resources/Public/Backend/Css/CookieSettings.scss
+++ b/Resources/Public/Backend/Css/CookieSettings.scss
@@ -132,7 +132,7 @@ table.dataTable{
       padding: 6px 18px;
       border-radius: 5px;
       font-size: 14px;
-      background-color: #1491AF;
+      background-color: #9BB51C;
     }
   }
   .settings-item-head{
@@ -251,7 +251,7 @@ table.dataTable{
     padding: 6px 18px;
     border-radius: 5px;
     font-size: 14px;
-    background-color: #1491AF;
+    background-color: #9BB51C;
     font-weight: bold;
     border: none;
     margin-bottom: 10px;
@@ -300,7 +300,7 @@ table.dataTable{
       padding: 6px 18px;
       border-radius: 5px;
       font-size: 14px;
-      background-color: #1491AF;
+      background-color: #9BB51C;
       font-weight: bold;
       border: none;
       margin-bottom: 6px;
