--- a/Resources/Private/Partials/BackendTabs/home.html
+++ b/Resources/Private/Partials/BackendTabs/home.html
@@ -82,8 +82,7 @@
 
                 <div class="cf-tutorial-section mt-3">
                     <h3>Extension Settings</h3>
-                    <p class="mb-3">Extension Settings can be found in settings tab from the Typo3 Administration tools.</p>
-
+                    <p class="mb-3">Extension-Settings can be found in settings tab from the TYPO3 administration tools, notice since V1.6 some settings moved to Site-Constants</p>
                     <div class="cf-extension-setting">
                         <strong>Plugin Enabled in Frontend:</strong>
                         <span class="setting-value">
@@ -98,14 +97,14 @@
                             </span>
                     </div>
                     <div class="cf-extension-setting">
-                        <strong>Cookiebanner hidden from Bots:</strong>
+                        <strong>Consent tracking enabled:</strong>
                         <span class="setting-value">
-                                <f:if condition="{extensionConfiguration.hideFromBots} === '0'">
+                                <f:if condition="{extensionConfiguration.trackingEnabled} === '0'">
                                     <f:then>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
                                     </f:then>
                                     <f:else>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
                                     </f:else>
                                 </f:if>
                             </span>
@@ -123,10 +122,25 @@
                                 </f:if>
                             </span>
                     </div>
+
+                    <br>
                     <div class="cf-extension-setting">
-                        <strong>Consent Tracking enabled:</strong>
+                        <strong>Cookiebanner hidden from Bots:</strong>
                         <span class="setting-value">
-                                <f:if condition="{extensionConfiguration.trackingEnabled} === '0'">
+                                <f:if condition="{constantsConfiguration.hide_from_bots} === '1'">
+                                    <f:then>
+                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
+                                    </f:then>
+                                    <f:else>
+                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+                                    </f:else>
+                                </f:if>
+                            </span>
+                    </div>
+                    <div class="cf-extension-setting">
+                        <strong>Run consent modal on page load:</strong>
+                        <span class="setting-value">
+                                <f:if condition="{constantsConfiguration.autorun_consent} === '0'">
                                     <f:then>
                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
                                     </f:then>
@@ -137,9 +151,23 @@
                             </span>
                     </div>
                     <div class="cf-extension-setting">
+                        <strong>Block page navigation until user consent modal action:</strong>
+                        <span class="setting-value">
+                                <f:if condition="{constantsConfiguration.force_consent} === '0'">
+                                    <f:then>
+                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+                                    </f:then>
+                                    <f:else>
+                                         <svg xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="18"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
+                                    </f:else>
+                                </f:if>
+                            </span>
+                    </div>
+
+                    <div class="cf-extension-setting">
                         <strong>Frontend-Consent revision version:</strong>
                         <span class="setting-value">
-                                {extensionConfiguration.revisionVersion}
+                                {constantsConfiguration.revision_version}
                             </span>
                     </div>
                     <div class="cf-cookie-btn-group">
