--- a/Resources/Public/Scss/default.scss
+++ b/Resources/Public/Scss/default.scss
@@ -58,7 +58,7 @@
 .cf-cookie-openconsent{
   position: fixed;
   bottom: 15px;
-  right: 15px;
+  left: 15px;
   border-radius: 50%;
   background: #202020;
   z-index: 10000000;
