[TASK] Completed Frontend-Tour todos

--- a/Resources/Private/Partials/BackendTabs/home.html
+++ b/Resources/Private/Partials/BackendTabs/home.html
@@ -61,9 +61,9 @@
         </div>
         <div class="col col-sm-12 col-md-12 col-xl-4">
                 <div class="cf-tutorial-section">
-                    <h3>Tutorial Section (BETA)</h3>
+                    <h3>Tutorial Section</h3>
                     <p>Let guide you through the configuration with a Live Tutorial.<br> Click on a "start" button below to start a Guided Tour.</p>
-                    <p class="cf-tutorial-notice"> <strong>NOTICE: </strong><br>Tutorial Data is stored in your browsers session storage, clear it, if you have problems with this section, a page reload can help to.</p>
+                    <!-- <p class="cf-tutorial-notice"> <strong>NOTICE: </strong><br>Tutorial Data is stored in your browsers session storage, clear it, if you have problems with this section, a page reload can help to.</p> -->
                     <div class="tutorial-tours">
                         <div class="tutorial-tour">
                             <p>Start a Tour thought the Frontend Settings.</p>
