--- a/Resources/Public/Scss/default.css
+++ b/Resources/Public/Scss/default.css
@@ -1298,7 +1298,7 @@ html.force--consent.show--consent, html.force--consent.show--consent body {
   filter: alpha(opacity=80);
 }
 
-div[data-service] *, div[data-service] :after, div[data-service] :before {
+div[data-service], div[data-service]:after, div[data-service]:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   float: none;
@@ -1306,14 +1306,14 @@ div[data-service] *, div[data-service] :after, div[data-service] :before {
   font-variant: normal;
   font-weight: inherit;
   font-family: inherit;
-  line-height: 1.2;
-  font-size: 1em;
+  line-height: inherit;
+  font-size: inherit;
   margin: 0;
   padding: 0;
   text-transform: none;
   letter-spacing: unset;
   color: inherit;
-  background: 0 0;
+  background: inherit;
   border: none;
   box-shadow: none;
   text-decoration: none;
